--- a/Red-Gray-Simple.theme.css
+++ b/Red-Gray-Simple.theme.css
@@ -17,9 +17,44 @@ background-color:#1e1e1e !important;
 background-color:#1e1e1e !important;
 border: 1px solid red;
 }
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.js {
+background-color:#1e1e1e !important;
+border: 1px solid red;
+}
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.python {
+background-color:#1e1e1e !important;
+border: 1px solid red;
+}
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.java {
+background-color:#1e1e1e !important;
+border: 1px solid red;
+}
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs {
+background-color:#1e1e1e !important;
+border: 1px solid red;
+}
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.markdown {
+background-color:#1e1e1e !important;
+border: 1px solid red;
+}
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.lua {
+background-color:#1e1e1e !important;
+border: 1px solid red;
+}
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.asciidoc {
+background-color:#1e1e1e !important;
+border: 1px solid red;
+}
+.scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.html {
+background-color:#3a3a3a !important;
+border: 1px solid red;
+}
 .scrollbarGhost-K_3Xa9.scrollbar-11WJwo.hljs.CSS {
 background-color:#1e1e1e !important;
 border: 1px solid red;
+}
+.embedInner-t4ag7g {
+background-color:#1e1e1e !important;
 }
 .theme-dark .autocomplete-1TnWNR {
 background-color: rgba(0,0,0,0.5) !important;
